<?xml version="1.0"?>
<package format="2">
  <name>dvs_mosaic</name>
  <version>0.0.0</version>
  <description>Self-implementation of parallel tracking and mosaicing paper BMVC 2014</description>
  <maintainer email="guillermo.gallego@tu-berlin.de">Guillermo Gallego</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dvs_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_geometry</depend>
  <depend>camera_info_manager</depend>
  <depend>minkindr</depend>
  <depend>tf_conversions</depend>

  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>

  <export>
  </export>

</package>
